app/assets/stylesheets/profile.css
.brands-profile-page-wrapper {
    font-family: "Raleway", sans-serif;
    margin: 20px 10px;
    background-color: rgba(255, 255, 255, 1);
    -webkit-box-shadow: 0 0 2px #999999;
    -moz-box-shadow: 0 0 2px #999999;
    box-shadow: 0 0 2px #999999;
    padding: 25px 4% 25px;
    overflow: hidden;

}

.brands-profile-page-wrapper .social-account-tabs {
    margin-bottom: 80px;
}

@media (min-width: 768px) {
    .brands-profile-page-wrapper {
        padding-right: 5%;
        margin: 25px 20px;
    }
}

.display-inline {
    display: inline-block;
}

.brands-profile-page-wrapper label {
    padding-right: 15px;
    font-size: 13px;
    font-weight: 400;
}

.personal-info-form .form-group {
    text-align: right;
    margin-bottom: 0;
    line-height: 1;
}

.brands-profile-page-wrapper input, .brands-profile-page-wrapper select {
    line-height: 1;
    height: 30px;
    border-radius: 0;
    border: 1px solid #d9d9d9;
    margin-bottom: 10px;
}

.personal-info-form .form-group textarea {
    resize: none;
    height: 110px;
    margin-bottom: 7px;
}

.brands-profile-page-wrapper input, .brands-profile-page-wrapper select, .personal-info-form .form-group textarea {
    width: 70%;
    display: inline;
}
.personal-info-form .form-group textarea.short_bio{
    width: 70%;
}

.personal-info-form .form-group .textarea-label {
    vertical-align: top;
    padding-top: 10px;
}

.street-address-textarea {
    padding: 5px 0 0 5px;
}

.account-setup, .company-info, .personal-info  {
    margin-bottom: 45px;
    margin-top: 45px;
    text-align: center;
    color: #ff305a;
    font-weight: 600;
    font-size: 16px;
}

.social-account {
    margin-bottom: 30px;
    margin-top: 40px;
    text-align: center;
    color: #ff305a;
    font-weight: 600;
    font-size: 16px;
}

.personal-info {
    margin-top: 30px;
}


.profile-picture {
    padding: 6px;
    background: -webkit-linear-gradient(#35d0b4, #3678c6);
    background: -moz-linear-gradient(#35d0b4, #3678c6);
}

.btn-update {
    background-color: #f8c102;
    height: 32px;
    color: white;
    font-family: "Raleway", sans-serif;
    font-size: 13px;
    font-weight: 600;
    margin: 10px 20px 40px;
    padding: 5px 30px;
}

.btn-account {
    background-color: #f8c102;
    height: 32px;
    color: white;
    font-family: "Raleway", sans-serif;
    font-size: 13px;
    font-weight: 600;
    float: right;
    padding: 5px 15px;
}

.profile-dropdown-color {
    background-color: white;
    padding: 3px;
}

#user_state_code_wrapper {
    display: inline;
}

.personal-info-form .short-bio-row {
    margin-bottom: 20px;
}

.divider-personal-info-password {
    /*border-color: #DDDDDD;*/
    /*border-style: solid none;*/
    /*border-width: 1px 0;*/
    margin-left: -40px;
    margin-right: -50px;
}

.brands-profile-page-wrapper input, .brands-profile-page-wrapper textarea {
    padding-left: 5px;
}

.social-account-tab-content {
    border: 1px solid #ddd ;
    border-top: none;
    padding-top: 35px;
    padding-right: 30px;
    padding-bottom: 80px;
    margin-bottom: 20px;
}

.social-account-tabs {
    padding-top: 30px;
    margin-left: -3%;
    margin-right: -4%;

}
.social-account-tabs .social-account-nav-tabs a {
    color: #696969;
}

.social-account-tabs .social-account-nav-tabs li.active .social-account-fa-edit {
    color: #3c8dbc;
}

.social-account-fa-edit {
    font-size: 1.5em;
    padding-right: 5px;
}

.social-account-tab-content .form-group input {
    width: 33%;
}

.social-account-tabs .social-account-nav-tabs li a {
    padding-right: 45px;
}

/* ============== page responsive stylesheet ================= */

/* style for making compatible with 320 to 767 px devices */
@media (max-width: 768px) {
    .brands-profile-page-wrapper input, .brands-profile-page-wrapper select, .personal-info-form .form-group textarea {
        width: 65%;
    }

    .personal-info-form .form-group textarea.short_bio{
        width: 80%;
    }
}

/* style for making compatible with 992 to 1200 px devices */
@media (min-width: 992px) {
    .personal-info-form .form-group textarea.short_bio{
        width: 86%;
    }
}

@media (max-width: 1000px) {

    .social-account-tabs .social-account-nav-tabs li {
        margin-bottom: -3px;
    }

}

@media (max-width: 900px) {

    .social-account-tabs .social-account-nav-tabs li a {
        padding-right: 15px;
    }

}

@media (max-width: 1024px) {

    .social-account-tabs .social-account-nav-tabs {
        margin-top: 15px;
    }

}

@media (max-width: 480px) {

    .social-account-tabs .social-account-nav-tabs {
        font-size: 11px;
    }

}

.modal-dialog {
    padding: 100px 0;
    width: 60%;
    font-family: 'Raleway', sans-serif;
}

.modal-content {
    min-height: 460px;
}

.modal-header {
    height: 100px;
    padding: 32px 54px;
    background-color: #00c9f3;
}

.modal-header .close {
    color: #FFFFFF;
    font-size: 3em;
    margin-top: -38px;
    opacity: 1.5;
    font-weight: 100;
}

.modal-body {
    padding: 40px 54px 0;
}

.modal-body .btn-primary {
    background-color: #00c9f3;
    border: 0;
    border-radius: 0;
    color: #fff;
    padding-left: 68px;
    padding-right: 68px;
}

.media-body{
    width: 1000px;
}

.js-clickable {
    cursor: pointer;
}

.add-another-account {
    font-size: 20px;
    font-weight: 500;
    border-bottom: 1px solid #dddddd;
    padding-bottom: 20px;
}

.account-content{
    margin-top: 20px;
    font-size: 16px
}

.account-content a {
    color: #8f8f8f;
}
.help-note{
    padding: 60px 0 30px;
}
.help-note p{
    line-height: 0.8;
}

.profile-image-modal-content {
    min-height: 200px;
}

.profile-image-modal-header {
    height: auto;
    padding: 32px 54px;
    background-color: white;
}

.profile-image-modal-header .close {
    color: #aaaaaa;
    margin-top: -15px;
}

.btn-update:hover, .btn-account:hover {
    color: white;
    background-color: #f1b242;
}

@media (max-width: 480px) {
    .personal-info-without-fb label, .personal-info-without-fb input, .personal-info-without-fb select, .personal-info-without-fb .form-group textarea, .personal-info-without-fb .form-group textarea.short_bio {
        display: block;
        text-align: left;
        width: 100%;
    }

    .street-address-textarea {
        margin-bottom: 7px;
    }

    .btn-update {
        width: 95%;
        margin: 10px
    }
}

